--- a/src/styles/components/_WorkOrders.scss
+++ b/src/styles/components/_WorkOrders.scss
@@ -45,7 +45,6 @@
     width: 75%;
     height: 89vh;
     .create-work-order {
-      border: 1px solid red;
       height: 100%;
       .header {
         text-align: center;
@@ -61,27 +60,49 @@
       }
       .section-container {
         display: flex;
-        border: 1px solid blue;
         width: 75%;
         margin: 0 auto;
         margin-top: 2rem;
         height: 75%;
+        .work-order-request,
+        .company-info,
+        .work-description,
+        .property-img {
+          border: 1px solid #22668a;
+          height: 50%;
+        }
+        .section-title {
+          font-size: 1.25rem;
+          text-align: center;
+          height: 15%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        }
         .property-section {
-          border: 1px solid orange;
           width: 50%;
           margin: 0 auto;
           position: relative;
           .property-img {
-            height: 50%;
             width: 100%;
             img {
               height: 100%;
               width: 100%;
             }
           }
-          .property-information {
-            height: 50%;
-            border: 1px solid orange;
+          .work-order-request {
+            .property-buttons {
+              width: 75%;
+              margin: 0 auto;
+              position: relative;
+              top: 25%;
+              display: flex;
+              justify-content: space-between;
+              .btn {
+                width: 40%;
+                font-size: 1.15rem;
+              }
+            }
           }
           .property-selector {
             position: absolute;
@@ -96,124 +117,45 @@
       .company-section {
         width: 50%;
         .company-info {
-          border: 1px solid rgb(233, 233, 106);
-          width: 100%;
-          height: 50%;
-          border: 1px solid red;
-          padding: 1.5rem 4rem;
-          .input-group {
+          .input-container {
+            width: 90%;
+            margin: 0 auto;
+            height: 75%;
             display: flex;
-            align-items: center;
-            width: 100%;
-            margin-top: 1rem;
-            h6 {
-              font-size: 1rem;
-              width: 15%;
+            flex-direction: column;
+            justify-content: space-between;
+            .input-group {
+              display: flex;
+              align-items: center;
+              width: 100%;
+              h6 {
+                font-size: 1rem;
+                width: 15%;
+              }
+              input {
+                width: 85%;
+                border: none;
+                background-color: transparent;
+                border-bottom: 1px solid green;
+                padding: 3px 0;
+              }
+              input:focus {
+                outline: none;
+              }
             }
-            input {
-              width: 85%;
-              border: none;
-              background-color: transparent;
-              border-bottom: 1px solid green;
-              padding: 3px 8px;
-            }
-
-            input:focus {
-              outline: none;
-            }
-          }
-          h5 {
-            font-size: 1.25rem;
-            text-align: center;
           }
         }
         .work-description {
-          height: 50%;
-          padding: 1.5rem 4rem;
-          h5 {
-            text-align: center;
-            font-size: 1.25rem;
-          }
-        }
-      }
-    }
-    .add-job {
-      height: 100%;
-      .job-order-form {
-        height: 100%;
-        margin: 0 auto;
-        .form-header {
-          text-align: center;
-          border-left: 1px solid $btn-grey;
-          border-bottom: 1px solid $btn-grey;
-          height: 12%;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          h4 {
-            font-size: 1.5rem;
-          }
-        }
-        .form-body {
-          padding: 0 2rem;
-          height: 70%;
-          margin-top: 2%;
-          display: flex;
-          justify-content: space-between;
-          h5 {
-            font-size: 1.25rem;
-            margin: 1% 0;
-          }
-          .input-group {
-            margin-bottom: 0.5rem;
-            h6 {
-              font-size: 1rem;
-              margin-bottom: 0.25rem;
-            }
-            input {
-              padding: 6px 2px;
-              border-radius: 5px;
-            }
-            select {
-              padding: 6px 2px;
-              border-radius: 5px;
-            }
-          }
-          .form-right-side {
-            width: 50%;
-          }
-          .form-left-side {
-            width: 45%;
-          }
-          .job-description {
-            height: 69%;
-            position: relative;
-            top: 10%;
-            h5 {
-              text-align: center;
-              margin-bottom: 0.5rem;
-            }
-            textarea {
-              height: 100%;
+          .description-box {
+            width: 90%;
+            margin: 0 auto;
+            height: 75%;
+            .text-box {
               width: 100%;
-              border-radius: 10px;
-              padding: 1rem;
+              height: 100%;
+              border-radius: 5px;
+              padding: 10px;
             }
-          }
-        }
-        .form-footer {
-          border-top: 1px solid $btn-grey;
-          height: 10%;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          margin-top: 1rem;
-          button {
-            padding: 6px 12px;
-            border-radius: 5px;
-          }
-          button:first-child {
-            margin-right: 2%;
           }
         }
       }
