--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -948,7 +948,6 @@ template {
     width: 75%;
     height: 89vh; }
     .component-workOrders .component-views .create-work-order {
-      border: 1px solid red;
       height: 100%; }
       .component-workOrders .component-views .create-work-order .header {
         text-align: center;
@@ -962,25 +961,42 @@ template {
           font-size: 1.5rem; }
       .component-workOrders .component-views .create-work-order .section-container {
         display: flex;
-        border: 1px solid blue;
         width: 75%;
         margin: 0 auto;
         margin-top: 2rem;
         height: 75%; }
+        .component-workOrders .component-views .create-work-order .section-container .work-order-request,
+        .component-workOrders .component-views .create-work-order .section-container .company-info,
+        .component-workOrders .component-views .create-work-order .section-container .work-description,
+        .component-workOrders .component-views .create-work-order .section-container .property-img {
+          border: 1px solid #22668a;
+          height: 50%; }
+        .component-workOrders .component-views .create-work-order .section-container .section-title {
+          font-size: 1.25rem;
+          text-align: center;
+          height: 15%;
+          display: flex;
+          justify-content: center;
+          align-items: center; }
         .component-workOrders .component-views .create-work-order .section-container .property-section {
-          border: 1px solid orange;
           width: 50%;
           margin: 0 auto;
           position: relative; }
           .component-workOrders .component-views .create-work-order .section-container .property-section .property-img {
-            height: 50%;
             width: 100%; }
             .component-workOrders .component-views .create-work-order .section-container .property-section .property-img img {
               height: 100%;
               width: 100%; }
-          .component-workOrders .component-views .create-work-order .section-container .property-section .property-information {
-            height: 50%;
-            border: 1px solid orange; }
+          .component-workOrders .component-views .create-work-order .section-container .property-section .work-order-request .property-buttons {
+            width: 75%;
+            margin: 0 auto;
+            position: relative;
+            top: 25%;
+            display: flex;
+            justify-content: space-between; }
+            .component-workOrders .component-views .create-work-order .section-container .property-section .work-order-request .property-buttons .btn {
+              width: 40%;
+              font-size: 1.15rem; }
           .component-workOrders .component-views .create-work-order .section-container .property-section .property-selector {
             position: absolute;
             bottom: 50%;
@@ -990,100 +1006,37 @@ template {
             padding-bottom: 1rem; }
       .component-workOrders .component-views .create-work-order .company-section {
         width: 50%; }
-        .component-workOrders .component-views .create-work-order .company-section .company-info {
-          border: 1px solid #e9e96a;
-          width: 100%;
-          height: 50%;
-          border: 1px solid red;
-          padding: 1.5rem 4rem; }
-          .component-workOrders .component-views .create-work-order .company-section .company-info .input-group {
+        .component-workOrders .component-views .create-work-order .company-section .company-info .input-container {
+          width: 90%;
+          margin: 0 auto;
+          height: 75%;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between; }
+          .component-workOrders .component-views .create-work-order .company-section .company-info .input-container .input-group {
             display: flex;
             align-items: center;
-            width: 100%;
-            margin-top: 1rem; }
-            .component-workOrders .component-views .create-work-order .company-section .company-info .input-group h6 {
+            width: 100%; }
+            .component-workOrders .component-views .create-work-order .company-section .company-info .input-container .input-group h6 {
               font-size: 1rem;
               width: 15%; }
-            .component-workOrders .component-views .create-work-order .company-section .company-info .input-group input {
+            .component-workOrders .component-views .create-work-order .company-section .company-info .input-container .input-group input {
               width: 85%;
               border: none;
               background-color: transparent;
               border-bottom: 1px solid green;
-              padding: 3px 8px; }
-            .component-workOrders .component-views .create-work-order .company-section .company-info .input-group input:focus {
+              padding: 3px 0; }
+            .component-workOrders .component-views .create-work-order .company-section .company-info .input-container .input-group input:focus {
               outline: none; }
-          .component-workOrders .component-views .create-work-order .company-section .company-info h5 {
-            font-size: 1.25rem;
-            text-align: center; }
-        .component-workOrders .component-views .create-work-order .company-section .work-description {
-          height: 50%;
-          padding: 1.5rem 4rem; }
-          .component-workOrders .component-views .create-work-order .company-section .work-description h5 {
-            text-align: center;
-            font-size: 1.25rem; }
-    .component-workOrders .component-views .add-job {
-      height: 100%; }
-      .component-workOrders .component-views .add-job .job-order-form {
-        height: 100%;
-        margin: 0 auto; }
-        .component-workOrders .component-views .add-job .job-order-form .form-header {
-          text-align: center;
-          border-left: 1px solid #4D5765;
-          border-bottom: 1px solid #4D5765;
-          height: 12%;
-          display: flex;
-          justify-content: center;
-          align-items: center; }
-          .component-workOrders .component-views .add-job .job-order-form .form-header h4 {
-            font-size: 1.5rem; }
-        .component-workOrders .component-views .add-job .job-order-form .form-body {
-          padding: 0 2rem;
-          height: 70%;
-          margin-top: 2%;
-          display: flex;
-          justify-content: space-between; }
-          .component-workOrders .component-views .add-job .job-order-form .form-body h5 {
-            font-size: 1.25rem;
-            margin: 1% 0; }
-          .component-workOrders .component-views .add-job .job-order-form .form-body .input-group {
-            margin-bottom: 0.5rem; }
-            .component-workOrders .component-views .add-job .job-order-form .form-body .input-group h6 {
-              font-size: 1rem;
-              margin-bottom: 0.25rem; }
-            .component-workOrders .component-views .add-job .job-order-form .form-body .input-group input {
-              padding: 6px 2px;
-              border-radius: 5px; }
-            .component-workOrders .component-views .add-job .job-order-form .form-body .input-group select {
-              padding: 6px 2px;
-              border-radius: 5px; }
-          .component-workOrders .component-views .add-job .job-order-form .form-body .form-right-side {
-            width: 50%; }
-          .component-workOrders .component-views .add-job .job-order-form .form-body .form-left-side {
-            width: 45%; }
-          .component-workOrders .component-views .add-job .job-order-form .form-body .job-description {
-            height: 69%;
-            position: relative;
-            top: 10%; }
-            .component-workOrders .component-views .add-job .job-order-form .form-body .job-description h5 {
-              text-align: center;
-              margin-bottom: 0.5rem; }
-            .component-workOrders .component-views .add-job .job-order-form .form-body .job-description textarea {
-              height: 100%;
-              width: 100%;
-              border-radius: 10px;
-              padding: 1rem; }
-        .component-workOrders .component-views .add-job .job-order-form .form-footer {
-          border-top: 1px solid #4D5765;
-          height: 10%;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          margin-top: 1rem; }
-          .component-workOrders .component-views .add-job .job-order-form .form-footer button {
-            padding: 6px 12px;
-            border-radius: 5px; }
-          .component-workOrders .component-views .add-job .job-order-form .form-footer button:first-child {
-            margin-right: 2%; }
+        .component-workOrders .component-views .create-work-order .company-section .work-description .description-box {
+          width: 90%;
+          margin: 0 auto;
+          height: 75%; }
+          .component-workOrders .component-views .create-work-order .company-section .work-description .description-box .text-box {
+            width: 100%;
+            height: 100%;
+            border-radius: 5px;
+            padding: 10px; }
     .component-workOrders .component-views .job-queue {
       height: 100%;
       text-align: center;
